correciones mapas mentales responsivas

--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-efecto.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-efecto.css
@@ -4,6 +4,9 @@
     background-size: cover;
     background-position: center center;
 }
+.titulo-mapa-2{
+    color: #e8641b;
+}
 
 .imagen-pez{
     width: 60%;
