--- a/tecolotl-web/src/main/webapp/template/escolar/header-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/template/escolar/header-alumno.xhtml
@@ -13,7 +13,7 @@
     </div>
     <div class="color-nav uk-hidden@m">
         <nav class="uk-navbar-container uk-navbar-transparent" uk-navbar="">
-            <div class="padding-logo">
+            <div class="">
                 <a class="logo uk-logo" href="#">
                     <h:graphicImage  library="img" name="esquadron.svg"  alt="logo" title="logo" width="30px" height="30px" />
                     <span class="lescuadron letra-logo uk-visible@m">squadron</span>
