--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-cronologico.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-cronologico.css
@@ -42,6 +42,22 @@
 .sobrepuesto{
     z-index: 3;
 }
+
+.titulo-mapa-3{
+    z-index: 2;
+    top: 60px;
+    left: 15px;
+    color: rebeccapurple;
+    font-weight: bold;
+}
+.dialogo-small{
+    width: 60%;
+    margin: auto;
+}
+.imagen-mapa-small{
+    width: 60%;
+    margin: auto;
+}
 @media screen and (min-width: 1024px ){
     .margen-mapa{
         margin-top: 25%;
@@ -70,6 +86,9 @@
     .dialogo{
         width: 220px;
     }
+    .titulo-mapa-3{
+        font-size: 20px;
+    }
 }
 
 @media  screen and (min-width: 1200px) {
@@ -91,6 +110,24 @@
         top: 0%;
         z-index: 2;
     }
+    .titulo-mapa-3{
+        font-size: 22px;
+        top: 45px;
+        left: 20px;
+    }
+    .dialogo-small{
+        width: 80%;
+    }
+}
+@media  screen and (max-width: 330px) {
+    .dialogo-small{
+        width: 80%;
+    }
+    .titulo-mapa-3{
+        font-size: 15px;
+        top: 45px;
+        left: 15px;
+    }
 }
 
 .posicion-contenedor{
@@ -106,11 +143,4 @@
         margin-right: 20px;
     }
 }
-.imagen-mapa-small{
-    width: 60%;
-    margin: auto;
-}
-.dialogo-small{
-    width: 60%;
-    margin: auto;
-}
+
