--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-mental-historieta.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-mental-historieta.css
@@ -1,10 +1,47 @@
-.fondo-historieta{
-    background-image: url("#{resource['img/fondo/fondo-6.svg']}");
-    background-repeat: no-repeat;
-    background-size: cover;
+.fondo-6{
+    background:  url("#{resource['img/mounstro/whom.svg']}") no-repeat top right/30%,url("#{resource['img/alumno/fondo-6.png']}") no-repeat center center/100% 100%;
+    /*background-repeat: no-repeat;*/
+    /*background-size: 100% 100%;*/
+    height: 1200px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    padding-bottom: 40px;
 }
-.caja-historieta{
-    width:  80%;
-    height: 600px;
-    background-color: #0e6ecd;
+
+input[type="text"]{
+    background-color: transparent;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: 2px black dashed !important;
+    border-radius: 0 !important;
+    height: 40px;
+    width: 100%;
+    box-sizing: border-box;
+}
+.contenedor-seis{
+    width: 100%;
+    height: auto;
+    margin-bottom: 90px;
+}
+.contenedor-seis-uno{
+    width: 50%;
+    padding: 0 10px;
+    margin-right: 5px;
+}
+.contenedor-seis-dos{
+    width: 50%;
+}
+
+.respuestas{
+    background-color: white;
+    border:2px solid black;
+    color: black;
+}
+
+.subtitulo-6{
+    font-weight: bold;
+    text-align: center;
+    font-size: 29px;
 }
