fondos alumno de movil ipad y general

--- a/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
@@ -1,9 +1,27 @@
 body{
-    /*background-color: black;*/
     background-image: url("#{resource['img/alumno/fondo-general.svg']}");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+
+}
+
+@media screen and (max-width: 1030px ){
+    body{
+        background-image: url("#{resource['img/alumno/fondo-gral-ipad.svg']}");
+        background-size: 100% 100%;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+    }
+}
+
+@media screen and (max-width: 768px){
+    body{
+        background-image: url("#{resource['img/alumno/fondo-gral-movil.svg']}");
+        background-size: 100% 100%;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+    }
 }
 
 #top-head {
