--- a/tecolotl-web/src/main/webapp/resources/css/alumno/select-mindmap.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/select-mindmap.css
@@ -6,12 +6,12 @@
     height: 300px;
 
 }
-.card-mapa> img{
+.card-mapa > a >  img{
     width: 100%;
     height: 100%;
     border: 2px solid white;
 }
-.card-mapa> img:hover{
+.card-mapa > a > img:hover{
     border-color: #0e6ecd;
 }
 
@@ -22,6 +22,5 @@
     color: black;
     text-shadow: 1px 1px 0 white, -1px -1px 0 white;
     font-size: 18px;
-    font-weight: bold;
-    top: 1.5px;
+   top: 0;
 }
