--- a/tecolotl-web/src/main/webapp/resources/css/alumno/select-mindmap.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/select-mindmap.css
@@ -6,12 +6,12 @@
     height: 300px;
 
 }
-.card-mapa > a >  img{
+.card-mapa img{
     width: 100%;
     height: 100%;
     border: 2px solid white;
 }
-.card-mapa > a > img:hover{
+.card-mapa  img:hover{
     border-color: #0e6ecd;
 }
 
@@ -22,5 +22,67 @@
     color: black;
     text-shadow: 1px 1px 0 white, -1px -1px 0 white;
     font-size: 18px;
-   top: 0;
+   top: 140px;
+    left: calc((100%/3) - (120px/2));
+}
+
+.mapa-1{
+    background: url("#{resource['img/alumno/mapa-mental/preview/1.jpg']}") no-repeat center/contain;
+    background-clip: content-box;
+}
+.mapa-2{
+    background: url("#{resource['img/alumno/mapa-mental/preview/2.jpg']}") no-repeat center/cover;
+    background-clip: content-box;
+}
+.mapa-3{
+    background: url("#{resource['img/alumno/mapa-mental/preview/3.jpg']}") no-repeat center/cover;
+    background-clip: content-box;
+}
+.mapa-4{
+    background: url("#{resource['img/alumno/mapa-mental/preview/4.jpg']}") no-repeat center/cover;
+    background-clip: content-box;
+}
+.mapa-5{
+    background: url("#{resource['img/alumno/mapa-mental/preview/5.jpg']}") no-repeat center/100% 100%;
+    background-clip: content-box;
+}
+.mapa-6{
+    background: url("#{resource['img/alumno/mapa-mental/preview/6.jpg']}") no-repeat center/100% 100%;
+    background-clip: content-box;
+}
+.mapa-7{
+    background: url("#{resource['img/alumno/mapa-mental/preview/7.jpg']}") no-repeat center/100% 100%;
+    background-clip: content-box;
+}
+.mapa-8{
+    background: url("#{resource['img/alumno/mapa-mental/preview/8.jpg']}") no-repeat center/100% 100%;
+    background-clip: content-box;
+}
+.mapa-9{
+    background: url("#{resource['img/alumno/mapa-mental/preview/9.jpg']}") no-repeat center/100% 100%;
+    background-clip: content-box;
+}
+.mapa-10{
+    background: url("#{resource['img/alumno/mapa-mental/preview/10.jpg']}") no-repeat center/100% 100%;
+    background-clip: content-box;
+}
+.mapa-11{
+    background: url("#{resource['img/alumno/mapa-mental/preview/11.jpg']}") no-repeat center/100% 100%;
+    background-clip: content-box;
+}
+.mapa-12{
+    background: url("#{resource['img/alumno/mapa-mental/preview/12.jpg']}") no-repeat center/100% 100%;
+    background-clip: content-box;
+}
+.mapa-13{
+    background: url("#{resource['img/alumno/mapa-mental/preview/13.jpg']}") no-repeat center/100% 100%;
+    background-clip: content-box;
+}
+.mapa-14{
+    background: url("#{resource['img/alumno/mapa-mental/preview/14.jpg']}") no-repeat center/100% 100%;
+    background-clip: content-box;
+}
+.mapa-15{
+    background: url("#{resource['img/alumno/mapa-mental/preview/15.jpg']}") no-repeat center/100% 100%;
+    background-clip: content-box;
 }
