--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-13.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-13.css
@@ -7,23 +7,33 @@
 
 }
 .caja-padre-5{
-    width: 100%;
+    /*width: 100%;*/
     height: 1050px;
     margin-right: 0;
     margin-left: 0;
+    position: relative;
 
 }
+.contenedor-formularios{
+    width: 100%;
+}
+.catarina-13{
+    width: 20%;
+    position: absolute;
+    top: 0;
+    left:40%;
+}
 .caja-mapa-uno{
-    background-color: rgba(255,255,255,0.5);
-    height: 100%;
+    /*background-color: rgba(255,255,255,0.5);*/
+    /*height: 100%;*/
 }
 .caja-mapa-dos{
-    background-color: rgba(255,255,0,0.3);
-    height: 100%;
+    /*background-color: rgba(255,255,0,0.3);*/
+    /*height: 100%;*/
 }
 .caja-mapa-tres{
-    background-color: rgba(255,170,0,0.3);
-    width: 100%;
+    /*background-color: rgba(255,170,0,0.3);*/
+    /*width: 100%;*/
     height: 250px;
 }
 
@@ -71,4 +81,24 @@
     flex-wrap: wrap;
     flex-direction: column;
     height: 250px;
+}
+.color-verde{
+background-color: #00FE00;
+}
+.color-morado{
+background-color: #842484;
+}
+.color-naranja{
+background-color: #F5821F;
+}
+.color-azul{
+background-color: #00AEEF;
+}
+
+@media screen and (max-width: 900px) {
+    .fondo-13{
+        background: none;
+        height: auto;
+    }
+
 }
