--- a/tecolotl-web/src/main/webapp/resources/css/esquadron.css
+++ b/tecolotl-web/src/main/webapp/resources/css/esquadron.css
@@ -452,6 +452,7 @@ input[type=text]:focus,input[type=email]:focus,input[type=password]:focus,select
     font-size: 16px;
     font-weight: bold;
     font-family: 'Sniglet', "Arial Black";
+    text-transform: capitalize;
 }
 
 .margen-one{
