--- a/tecolotl-web/src/main/webapp/resources/css/navegacion.css
+++ b/tecolotl-web/src/main/webapp/resources/css/navegacion.css
@@ -123,8 +123,8 @@ uk-subnav-alumno2 li.uk-active:nth-child(6) a {
 }
 
 .boton{
-    color:black;
-    text-shadow: 1px 1px 2px white, -1px -1px 2px white;
+    color: white;
+    /*text-shadow: 1px 1px 2px white, -1px -1px 2px white;*/
     text-transform: capitalize;
     font-weight: bold;
     letter-spacing: 2px;
