--- a/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
@@ -430,7 +430,7 @@ iframe {
     display: none;
 }
 .realizado{
-    width: 250px;
+    width: 300px;
     height: 250px;
     background: url("#{resource['img/alumno/pop-art/popart-rojo.svg']}") no-repeat center/100% 100%;
     color: white;
@@ -445,4 +445,33 @@ iframe {
     justify-content: center;
     align-content: center;
     flex-wrap: wrap;
+}
+
+.movimiento{
+    left: 60%;
+    transform: rotate(15deg);
+}
+
+.boton-enviar{
+    background: #B31F0C;
+    color: white;
+    width: 110px;
+    height: 35px;
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
+    margin-top: 10px;
+    border-radius: 12px;
+    border: 2px solid white;
+    font-weight: bold;
+    font-size: 16px;
+}
+
+.boton-enviar:disabled{
+    background: orange;
+    color: white;
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
+    margin-top: 10px;
+    border-radius: 12px;
+    border: 4px solid #AEB6BF;
+    font-weight: bold;
+    font-size: 16px;
 }
