--- a/tecolotl-web/src/main/webapp/resources/css/alumno/order-sentences.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/order-sentences.css
@@ -1,18 +1,24 @@
 .oraciones{
     width: 80%;
-    padding: 5px;
+    padding: 9px 5px;
     border-radius: 5px;
-    border: 2px solid #00A36A;
-    background-color: white;
+    /*border: 2px solid #00A36A;*/
+    background-color: rgba(69, 179, 157 ,0.9) ;
     margin-top: 10px;
     font-family: "Comic Sans MS", "Comic Sans", cursive;
     color:black;
+    font-weight: bold;
+    text-shadow: 0.5px 0.5px 0 white,-0.5px -0.5px 0 white ;
+    font-size: 20px;
 }
 .contenedor-oraciones{
+    height: 600px;
+    background: url("#{resource['img/mounstro/naranja.svg']}") no-repeat  center center/ 90% 90%;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    justify-items: center;
-    height: 90vh;
-    background: url("#{resource['img/mounstro/naranja.svg']}") no-repeat fixed center center/ 90% 90%;
+    align-items: center;
+    justify-content: center;
+
+
 }
