se da estilo al letrero de Maricuartas

--- a/tecolotl-web/src/main/webapp/resources/css/esquadron.css
+++ b/tecolotl-web/src/main/webapp/resources/css/esquadron.css
@@ -504,5 +504,7 @@ padding-top: 38px;
   height: 200px;
 }
 .nombre-usuario{
-  font-size: 13px;
+  font-size: 13px !important;
+  font-weight: bold;
+  text-transform: capitalize;
 }
