--- a/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
@@ -517,3 +517,23 @@ iframe {
     background-color: #D35400;
 }
 
+.scroll-drag::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+.scroll-drag::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 8px black;
+    border-radius: 10px;
+}
+
+/* Handle */
+.scroll-drag::-webkit-scrollbar-thumb {
+    background: rgb(52, 73, 94);
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+.scroll-drag::-webkit-scrollbar-thumb:hover {
+    background: rgba(52, 73, 94, 0.5);
+}
