--- a/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
@@ -473,11 +473,16 @@ iframe {
     color: white;
     width: 110px;
     font-family: "Comic Sans MS", "Comic Sans", cursive;
+    text-align: center;
     margin-top: 10px;
     border-radius: 12px;
     border: 2px solid white;
     font-weight: bold;
     font-size: 16px;
+}
+
+.uk-subnav{
+    justify-content: center ;
 }
 
 .uk-subnav-pill > .uk-active > a{
