--- a/tecolotl-web/src/main/webapp/resources/css/alumno/order-sentences.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/order-sentences.css
@@ -116,3 +116,51 @@
 .color-cuatro{
     background-color: #CA445D;
 }
+.fondo-more{
+    background: url("#{resource['img/alumno/fondo-6.png']}") no-repeat center center/100% 100%;
+    height: 600px;
+
+}
+
+[class^="more-"]{
+    width: 50%;
+    height: 50%;
+    position: absolute;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+    transform: skew(-20deg);
+
+}
+[class^="more-"] span{
+    width: 80%;
+    color: black;
+    font-weight: bold;
+    font-size: 19px;
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
+    display: inline-block;
+    background-color: rgba(255,255,255,0.9);
+    text-align: justify;
+    padding: 8px;
+    border-radius: 8px;
+}
+.more-uno{
+    top: 0;
+    left: 0;
+}
+
+.more-dos{
+    top: 0;
+    right: 0;
+}
+.more-tres{
+    bottom: 0;
+    left: 0;
+}
+
+.more-cuatro{
+    bottom: 0;
+    right: 0;
+}
+
