--- a/tecolotl-web/src/main/webapp/resources/css/alumno/order-sentences.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/order-sentences.css
@@ -117,7 +117,7 @@
     background-color: #CA445D;
 }
 .fondo-more{
-    background: url("#{resource['img/alumno/fondo-6.png']}") no-repeat center center/100% 100%;
+    background: url("#{resource['img/alumno/fondo-6s.png']}") no-repeat center center/100% 100%;
     height: 600px;
 
 }
@@ -138,7 +138,7 @@
     color: black;
     font-weight: bold;
     font-size: 19px;
-    font-family: "Comic Sans MS", "Comic Sans", cursive;
+    font-family: "Comic Sans MS", "Comic Sans", "Times New Roman", sans-serif;
     display: inline-block;
     background-color: rgba(255,255,255,0.9);
     text-align: justify;
@@ -146,20 +146,24 @@
     border-radius: 8px;
 }
 .more-uno{
+    color: black;
     top: 0;
     left: 0;
 }
 
 .more-dos{
+    color: black;
     top: 0;
     right: 0;
 }
 .more-tres{
+    color: black;
     bottom: 0;
     left: 0;
 }
 
 .more-cuatro{
+    color: black;
     bottom: 0;
     right: 0;
 }
