--- a/tecolotl-web/src/main/webapp/resources/css/navegacion.css
+++ b/tecolotl-web/src/main/webapp/resources/css/navegacion.css
@@ -127,7 +127,7 @@ uk-subnav-alumno2 li.uk-active:nth-child(6) a {
     /*text-shadow: 1px 1px 2px white, -1px -1px 2px white;*/
     text-transform: capitalize;
     font-weight: bold;
-    font-family: "Comic Sans MS", "Comic Sans", cursive;
+    font-family: 'Sniglet', sans-serif;
     letter-spacing: 2px;
     padding: 10px 20px;
     font-size: 17px;
