--- a/tecolotl-web/src/main/webapp/resources/css/alumno/order-sentences.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/order-sentences.css
@@ -168,3 +168,59 @@
     right: 0;
 }
 
+.respuesta-oracion{
+    min-width: auto;
+    max-width: 100px;
+    background-color: #C0392B;
+    color: white;
+    display: inline-block;
+    margin-left: 8px;
+    margin-top: 3px;
+    padding: 5px 5px;
+    border-radius: 5px;
+    box-sizing: border-box;
+    font-family: Sniglet, sans-serif;
+}
+.contedor-oraciones{
+    height: 150px;
+    overflow: auto;
+    /*background-color: rgba(255,255,255,0.3);*/
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    border-radius: 8px;
+}
+
+.oracion-completar{
+    height: 150px;
+    color: black;
+    font-family: Sniglet, sans-serif;
+    background-color: white;
+    border-radius: 8px;
+
+
+}
+
+.contenedor-respuesta-oracion{
+    background-color: rgba(52, 73, 94, 0.5);
+    box-shadow: 3px 3px 5px black;
+    padding: 2px 0;
+    border-radius: 5px;
+    min-width: auto;
+    max-width: 100px;
+    display: inline-block;
+    text-align: center;
+}
+.oracion-completar span.uk-sortable-empty {
+    min-height: 25px;
+    min-width: 95px;
+}
+
+.oracion-completar .respuesta-oracion{
+    padding: 2px;
+    margin: 0;
+
+}
+
+
