--- a/tecolotl-web/src/main/webapp/resources/css/alumno/order-sentences.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/order-sentences.css
@@ -1,19 +1,21 @@
-
+*{
+    box-sizing: border-box;
+}
 .oraciones{
     width: 80%;
-    padding: 9px 5px;
-    border-radius: 5px;
-    /*border: 2px solid #00A36A;*/
-    background-color: rgba(69, 179, 157 ,0.9) ;
+    height: 60px;
+    padding-left: 10px;
+    border: 5px solid #D35400;
+    background-color: white;
+    border-radius: 3px;
     margin-top: 10px;
-    font-family: "Comic Sans MS", "Comic Sans", cursive;
     color:black;
     font-weight: bold;
-    text-shadow: 0.5px 0.5px 0 white,-0.5px -0.5px 0 white ;
     font-size: 20px;
 }
 .contenedor-oraciones{
     height: 600px;
+    width: 100%;
     background: url("#{resource['img/mounstro/naranja.svg']}") no-repeat  center center/ 90% 90%;
     display: flex;
     flex-wrap: wrap;
@@ -23,18 +25,21 @@
 
 }
 
-.contenedor-imagen{
+.contenedor-imagen {
     height: 600px;
     overflow: auto;
+}
+
+.contenedor-imagen:nth-child(1){
+    border: 2px solid #D35400;
+    padding: 8px;
 }
 
 .tabla-imagenes th{
     text-align: center;
     text-transform: capitalize;
-    font-family: "Comic Sans MS", "Comic Sans", cursive;
     font-weight: bold;
     font-size: 18px;
-    background-color: white;
 }
 .palabra-imagen{
     min-width: 150px;
@@ -246,4 +251,14 @@
 .caja-cuatro-more{
     background-color: #ED1285;
 }
+
+.imagen-oracion{
+    width: 90px;
+    height: 90px;
+    background: url("#{resource['img/mounstro/who.svg']}") no-repeat center/100% 100%;
+    margin-right: 15px;
+    border: 5px solid #D35400;
+    border-radius: 50%;
+}
+
 
