--- a/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
@@ -456,13 +456,13 @@ iframe {
     background: #CB4335;
     color: white;
     width: 110px;
-    font-family:'Sniglet', sans-serif;
     text-align: center;
     margin-top: 10px;
     border-radius: 12px;
     border: 2px solid white;
     font-weight: bold;
     font-size: 16px;
+    display: block;
 }
 
 .uk-subnav{
